<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mr.葵</string>
    <string name="app_name_v1">Mr.葵   V1.0</string>
    <string name="app_contact">Copyright © 2016\nGitHub:github.com/ybbz\nEmail:babaozhou@live.com</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_info">个人</string>
    <string name="action_theme">主题</string>
    <string name="action_about">关于</string>
    <string name="app_continue">尚未上线，敬请期待！</string>

    <!-- 个人中心 -->
    <string name="mine_history">历史数据</string>
    <string name="mine_analysis">数据分析</string>
    <string name="mine_account">账号与安全</string>
    <string name="mine_about">关于 Mr.葵</string>
    <string name="mine_logout">注销登录</string>

    <!-- menu -->

    <string name="menu_learn">学习</string>
    <string name="menu_code">代码</string>
    <string name="menu_body">身体</string>
    <string name="menu_mood">心情</string>
    <string name="menu_fun">娱乐</string>
    <string name="menu_run">跑步</string>
    <string name="menu_weather">天气</string>
    <string name="menu_date">日期</string>

    <!--  -->
    <string name="edit1">请选择圈数</string>
    <string name="edit2">请选择天气</string>
    <string name="edit3">请选择日期</string>

    <!--  -->
    <string name="modify_password_old">请输入旧密码</string>
    <string name="modify_password_new">请输入新密码</string>
    <string name="submit">确定</string>

    <!-- 登录 -->
    <string name="login">登录</string>
    <string name="login_register">登录/注册</string>
    <string name="login_phone">手机号</string>
    <string name="login_password">密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="logout">注销</string>

</resources>