<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <com.spectrum.widget.materialloadingprogressbar.CircleProgressBar
        android:id="@+id/progress1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:visibility="invisible"
        app:mlpb_progress_color="@color/blue_mix"
        app:mlpb_progress_stoke_width="3dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_padding" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/default_padding_5" >

                <TextView
                    style="@style/RatingbarTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_learn" />

                <RatingBar
                    android:id="@+id/ratingbar1"
                    style="@style/RatingbarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/default_padding_5" >

                <TextView
                    style="@style/RatingbarTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_code" />

                <RatingBar
                    android:id="@+id/ratingbar2"
                    style="@style/RatingbarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/default_padding_5" >

                <TextView
                    style="@style/RatingbarTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_body" />

                <RatingBar
                    android:id="@+id/ratingbar3"
                    style="@style/RatingbarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/default_padding_5" >

                <TextView
                    style="@style/RatingbarTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_mood" />

                <RatingBar
                    android:id="@+id/ratingbar4"
                    style="@style/RatingbarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/default_padding_5" >

                <TextView
                    style="@style/RatingbarTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_fun" />

                <RatingBar
                    android:id="@+id/ratingbar5"
                    style="@style/RatingbarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/default_padding_8" >

                <TextView
                    style="@style/RatingbarTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_run" />

                <EditText
                    android:id="@+id/et_run"
                    style="@style/ChooseTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/default_padding_8" >

                <TextView
                    style="@style/RatingbarTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_weather" />

                <EditText
                    android:id="@+id/et_weather"
                    style="@style/ChooseTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin_10"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/default_padding_8" >

                <TextView
                    style="@style/RatingbarTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_date" />

                <EditText
                    android:id="@+id/et_date"
                    style="@style/ChooseTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit3" />
            </LinearLayout>

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin_10"
                android:background="@drawable/submit_btn_selector"
                android:padding="@dimen/default_padding"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>