<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/kui" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="@dimen/default_margin_20"
                android:scaleType="fitCenter"
                android:src="@drawable/avatar" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_10"
                android:text="@string/app_name"
                android:textColor="@color/brown"
                android:textSize="16sp" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/history_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:background="@drawable/item_selector"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/default_padding" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mine_history"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/analysis_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:background="@drawable/item_selector"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/default_padding" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mine_analysis"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/account_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:background="@drawable/item_selector"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/default_padding" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mine_account"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/about_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:background="@drawable/item_selector"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/default_padding" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mine_about"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/logout_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:background="@drawable/item_selector"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/default_padding" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mine_logout"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>